# hyperresearch

./: .gitignore  AGENTS.md  CHANGELOG.md  LAYERCAKE.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.knack/: .gitignore  README.md
assets/: _generate_banner.py  _generate_benchmark.py
example-reports/: rl-exploration-trajectory-planning.md
src/hyperresearch/: __init__.py  __main__.py  codex_model_map.yaml
src/hyperresearch/cli/: __init__.py  _output.py  assets.py  batch.py  config_cmd.py  dedup.py  export.py  fetch.py  fetch_batch.py  git_cmd.py  graph.py  import_cmd.py  index.py  install.py  link.py  lint.py  main.py  mcp_cmd.py  note.py  repair.py  research.py  run_cmd.py  search.py  serve.py  setup.py  sources.py  tag.py  template.py  topic.py  watch.py
src/hyperresearch/core/: agent_docs.py  agent_platforms.py  codex.py  config.py  db.py  enrich.py  fetcher.py  frontmatter.py  hooks.py  linker.py  migrations.py  note.py  opencode_models.py  patterns.py  platforms.py  runs.py  similarity.py  sync.py  templates.py  untrusted.py  vault.py
src/hyperresearch/indexgen/: generator.py
src/hyperresearch/mcp/: __init__.py  server.py
src/hyperresearch/models/: __init__.py  note.py
src/hyperresearch/search/: __init__.py  filters.py  fts.py
src/hyperresearch/serve/: __init__.py  server.py
src/hyperresearch/skills/: __init__.py  hyperresearch-1-decompose.md  hyperresearch-10-triple-draft.md  hyperresearch-11-synthesize.md  hyperresearch-12-critics.md  (+20 more)
tests/: conftest.py
tests/test_cli/: test_commands.py  test_fetch_batch.py  test_lint.py  test_note_ops.py  test_setup.py
tests/test_core/: test_codex.py  test_frontmatter.py  test_hooks.py  test_note.py  test_opencode_models.py  test_packaging.py  test_patterns.py  test_prompt_golden.py  test_sync.py  test_untrusted.py  test_vault.py  test_verification.py
tests/test_graph/: test_links.py
tests/test_search/: test_fts.py
tests/test_web/: test_crawl4ai_stealth.py  test_exa_provider.py  test_fetch_many_fallback.py  test_fetch_many_gate.py  test_fetch_settings.py  test_parallel_provider.py  test_pdf_diagnostics.py  test_safe_http.py
(+13 files in other folders)
